<resources>
    <string name="app_name">HogwartsArchive</string>
    <string name="actor">Actor: %s</string>
    <string name="character_name">Character Name: %s </string>
    <string name="alternate_names">Alternate Names: %s</string>
    <string name="gender">Gender: %s</string>
    <string name="dob">DOB: %s</string>
    <string name="ancestry">Ancestry: %s</string>
    <string name="house">House: %s</string>
    <string name="patronus">Patronus: %s</string>
</resources>